fixing button placement so that its inline with our grid but also hidden by shat box when its open and fixed chat box position on mobile view.

--- a/app/assets/stylesheets/layout_components/buttons/buttons.scss
+++ b/app/assets/stylesheets/layout_components/buttons/buttons.scss
@@ -149,7 +149,7 @@
   &--fixed-br {
     @extend .button;
     position: fixed;
-    right: 1rem;
+    right: 2rem;
     bottom: 0.5rem;
     z-index: 2;
   }
